@@ -2,6 +2,7 @@
 
 Bug Fixes
 [x] Now correctly identifies row attributes via IRowData.
+[x] Correctly format Flag enumerations
 
 .:[ 0.0.2.28 ]:.
 New Features
